--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,6 +26,7 @@ error.change-pw.bad-url=\uBE44\uC815\uC0C1\uC801\uC778 URL\uC744 \uD1B5\uD574 \u
 error.file.not-exist=\uD30C\uC77C\uC774 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 
 notice.re-login.request=\uB85C\uADF8\uC778\uC774 \uD574\uC81C\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uB2E4\uC2DC \uB85C\uADF8\uC778\uD574\uC8FC\uC138\uC694.
+notice.deleted-user=\uC0AD\uC81C \uC694\uCCAD\uB41C \uC0AC\uC6A9\uC790\uC785\uB2C8\uB2E4. \uC0AD\uC81C \uC694\uCCAD \uCDE8\uC18C\uB97C \uD558\uACE0 \uC2F6\uB2E4\uBA74 \uACE0\uAC1D\uC13C\uD130\uB85C \uC5F0\uB77D\uC8FC\uC138\uC694.
 
 email.verification.subject=[TeamUp] \uC774\uBA54\uC77C \uC778\uC99D \uCF54\uB4DC\uC785\uB2C8\uB2E4
 email.verification.body=<h1>TeamUp \uC11C\uBE44\uC2A4 \uC774\uBA54\uC77C \uC778\uC99D \uCF54\uB4DC</h1><p>\uC548\uB155\uD558\uC138\uC694. \uD68C\uC6D0\uAC00\uC785\uC744 \uD658\uC601\uD569\uB2C8\uB2E4!</p><p>\uC544\uB798 \uC778\uC99D\uCF54\uB4E4\uB97C \uC785\uB825\uD558\uC5EC \uC774\uBA54\uC77C \uC778\uC99D\uC744 \uC644\uB8CC\uD574 \uC8FC\uC138\uC694.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">{0}</div><p>\uC774 \uCF54\uB4DC\uB294 {1}\uBD84 \uB3D9\uC548\uB9CC \uC720\uD6A8\uD569\uB2C8\uB2E4. \uAC00\uC785 \uD6C4 \uB354 \uB9CE\uC740 \uC11C\uBE44\uC2A4\uB97C \uC774\uC6A9\uD574 \uBCF4\uC138\uC694.</p><p>\uAC10\uC0AC\uD569\uB2C8\uB2E4.</p>
