--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -26,6 +26,7 @@ error.change-pw.bad-url=Request to change the password from an abnormal URL.
 error.file.not-exist=The file does not exist.
 
 notice.re-login.request=Login has been disabled. Please log in again.
+notice.deleted-user=This user has been requested to be deleted. If you would like to cancel your deletion request, please contact customer service.
 
 email.verification.subject=[TeamUp] Email authentication code
 email.verification.body=<h1>TeamUp Service Email Authentication Code</h1><p>Hello and welcome to join!</p><p>Please complete the e-mail authentication by entering the authentication coefficients below.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">{0}</div><p>This code is only valid for {1} minutes. Please try more services after signing up.</p><p>Thank you.</p>
