--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,6 +24,20 @@ error.encrypt.fail=RSA \uC554\uD638\uD654\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\u
 error.decrypt.fail=RSA \uBCF5\uD638\uD654\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 error.change-pw.bad-url=\uBE44\uC815\uC0C1\uC801\uC778 URL\uC744 \uD1B5\uD574 \uC628 \uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD \uC694\uCCAD\uC785\uB2C8\uB2E4.
 error.file.not-exist=\uD30C\uC77C\uC774 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+error.introduction.max-size=\uC790\uAE30\uC18C\uAC1C\uB294 \uCD5C\uB300 {0}\uC790 \uAE4C\uC9C0 \uC785\uB825 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+error.skill.max-size=\uBCF4\uC720 \uAE30\uC220\uC740 \uCD5C\uB300 {0}\uC790 \uAE4C\uC9C0 \uC785\uB825 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+error.experience.max-size=\uACBD\uD5D8\uC740 \uCD5C\uB300 {0}\uC790 \uAE4C\uC9C0 \uC785\uB825 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+error.additional-info.max-size=\uCD94\uAC00 \uC815\uBCF4\uB294 \uCD5C\uB300 {0}\uC790 \uAE4C\uC9C0 \uC785\uB825 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+error.project-url.max-size=\uD504\uB85C\uC81D\uD2B8 URL\uC740 \uD558\uB098\uB2F9 \uCD5C\uB300 {0}\uC790 \uAE4C\uC9C0 \uC785\uB825 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+error.project-urls.max-size=\uD504\uB85C\uC81D\uD2B8 URL\uC740 \uCD5C\uB300 {0}\uAC1C \uAE4C\uC9C0 \uC785\uB825 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+error.certificate.max-size=\uC790\uACA9\uC99D\uC740 \uD558\uB098\uB2F9 \uCD5C\uB300 {0}\uC790 \uAE4C\uC9C0 \uC785\uB825 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+error.certificates.max-size=\uC790\uACA9\uC99D\uC740 \uCD5C\uB300 {0}\uAC1C \uAE4C\uC9C0 \uC785\uB825 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+error.language-grade.max-size=\uC5B8\uC5B4 \uB4F1\uAE09\uC740 \uCD5C\uB300 {0}\uAC1C \uAE4C\uC9C0 \uC785\uB825 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+error.language-grade.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uC5B8\uC5B4 \uB4F1\uAE09\uC785\uB2C8\uB2E4. {0} ~ {1} \uC0AC\uC774\uC758 \uC815\uC218\uB85C \uC785\uB825\uD574 \uC8FC\uC138\uC694.
+error.any.size=\uCD5C\uC18C \uC785\uB825 \uAE38\uC774\uBCF4\uB2E4 \uC9E7\uAC70\uB098 \uCD5C\uB300 \uC785\uB825 \uAE38\uC774\uBCF4\uB2E4 \uAE41\uB2C8\uB2E4.
+error.list.size=\uCD5C\uC18C \uC785\uB825 \uAC1C\uC218\uBCF4\uB2E4 \uC801\uAC8C\uAC70\uB098 \uCD5C\uB300 \uC785\uB825 \uAC1C\uC218\uBCF4\uB2E4 \uB9CE\uC2B5\uB2C8\uB2E4.
+error.map.size=\uCD5C\uC18C \uC785\uB825 \uAC1C\uC218\uBCF4\uB2E4 \uC801\uAC8C\uAC70\uB098 \uCD5C\uB300 \uC785\uB825 \uAC1C\uC218\uBCF4\uB2E4 \uB9CE\uC2B5\uB2C8\uB2E4.
+error.map.pattern=\uC801\uC808\uD558\uC9C0 \uC54A\uC740 \uC591\uC2DD\uC785\uB2C8\uB2E4..
 
 notice.re-login.request=\uB85C\uADF8\uC778\uC774 \uD574\uC81C\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uB2E4\uC2DC \uB85C\uADF8\uC778\uD574\uC8FC\uC138\uC694.
 notice.deleted-user=\uC0AD\uC81C \uC694\uCCAD\uB41C \uC0AC\uC6A9\uC790\uC785\uB2C8\uB2E4. \uC0AD\uC81C \uC694\uCCAD \uCDE8\uC18C\uB97C \uD558\uACE0 \uC2F6\uB2E4\uBA74 \uACE0\uAC1D\uC13C\uD130\uB85C \uC5F0\uB77D\uC8FC\uC138\uC694.
